# gedit

./: .bzrignore  .cvsignore  AUTHORS  BUGS  CVSVERSION  ChangeLog  ChangeLog-20051212  FAQ  GNOME_Gedit.server.in  HACKING  INSTALL  KNOWNBUGS  MAINTAINERS  Makefile.am  Makefile.in  NEWS  README  README.plugins  THANKS  TODO  TODO-large  TODO-road_to_1.0.0  TRANSLATABLE_FILES  VER_0.7.0  VER_0.7.1  acconfig.h  app-docs.make  autogen.sh  config.h.in  configure.ac  configure.in  gedit-2.3.pc.in  gedit.1  gedit.desktop  gedit.desktop.in  gedit.doap  gedit.keys  gedit.schemas  gedit.spec  gedit.spec.in  (+3 more)
bindings/python/: .cvsignore  Makefile.am  gedit.defs  gedit.override  geditcommands.override  geditutils.override
data/: .cvsignore  GNOME_Gedit.server.in  GNOME_Gedit.server.in.in  Makefile.am  gedit-bugreport.sh  gedit-bugreport.sh.in  gedit.1  gedit.applications  gedit.convert  gedit.desktop.in  gedit.desktop.in.in  gedit.keys.in  gedit.pc.in  gedit.schemas.in  gedit.schemas.in.in  org.gnome.gedit.gschema.in.in  org.gnome.gedit.gschema.xml.in  org.gnome.gedit.gschema.xml.in.in  org.gnome.gedit.service.in
gedit/: .cvsignore  ChangeLog  GNOME_Gedit.idl  Makefile.am  NO-AUTO-GEN  aclocal.m4  auto.c  bacon-message-connection.c  bacon-message-connection.h  bonobo-mdi-child.c  bonobo-mdi-child.h  bonobo-mdi-session.c  bonobo-mdi-session.h  bonobo-mdi.c  bonobo-mdi.h  client.c  client.h  commands.c  commands.h  configure  configure.in  cvsdiff.c  debug.c  debug.h  dialog.c  dialog.h  diff.c  document.c  document.h  file.c  file.h  gE_about.c  gE_about.h  gE_document.c  gE_document.h  gE_files.c  gE_files.h  gE_init.c  gE_init.h  gE_mdi.c  (+304 more)
gedit/dialogs/: .cvsignore  Makefile.am  about.glade  close_all_dialog.glade2  dialog-about.c  dialog-find-line.c  dialog-goto-line.c  dialog-plugins.c  dialog-prefs.c  dialog-replace.c  dialog-search.c  dialog-uri.c  dialogs.h  find-line.glade  gedit-close-confirmation-dialog.c  gedit-close-confirmation-dialog.h  gedit-dialog-goto-line.c  gedit-dialog-plugin-manager.c  gedit-dialog-replace.c  gedit-dialog-uri.c  gedit-dialogs.h  gedit-encodings-dialog.c  gedit-encodings-dialog.glade  gedit-encodings-dialog.glade2  gedit-encodings-dialog.h  gedit-encodings-dialog.ui  gedit-open-location-dialog.c  gedit-open-location-dialog.glade  gedit-open-location-dialog.h  gedit-open-location-dialog.ui  gedit-page-setup-dialog.c  gedit-page-setup-dialog.glade  gedit-page-setup-dialog.h  gedit-plugin-manager.c  gedit-plugin-manager.h  gedit-plugin-program-location-dialog.c  gedit-preferences-dialog.c  gedit-preferences-dialog.glade  gedit-preferences-dialog.h  gedit-preferences-dialog.ui  (+34 more)
gedit/osx/: Makefile.am  gedit-osx-delegate.h  gedit-osx-delegate.m  gedit-osx.c  gedit-osx.h
gedit/recent-files/: Makefile.am  egg-recent-item.c  egg-recent-item.h  egg-recent-model.c  egg-recent-model.h  egg-recent-util.c  egg-recent-util.h  egg-recent-view-bonobo.c  egg-recent-view-gtk.c  egg-recent-view-uimanager.c
gedit/smclient/: Makefile.am  eggdesktopfile.c  eggdesktopfile.h  eggsmclient-osx.c  eggsmclient-private.h  eggsmclient-win32.c  eggsmclient-xsmp.c  eggsmclient.c  eggsmclient.h
gedit/theatrics/: Makefile.am  gedit-rounded-frame.c  gedit-theatrics-actor.c  gedit-theatrics-actor.h  gedit-theatrics-animated-widget.c  gedit-theatrics-animated-widget.h  gedit-theatrics-animation-drawable.c  gedit-theatrics-animation-drawable.h  gedit-theatrics-animation.c  gedit-theatrics-animation.h  gedit-theatrics-choreographer.c  gedit-theatrics-choreographer.h  gedit-theatrics-enum-types.c.template  gedit-theatrics-enum-types.h.template  gedit-theatrics-highlight-search-animation.c  gedit-theatrics-highlight-search-animation.h  gedit-theatrics-stage.c  gedit-theatrics-stage.h  gedit-theatrics-utils.c  gedit-theatrics-utils.h  gedit-view-container.c  gedit-view-container.h  test-view-container.c
gmodule-plugins/: ChangeLog  Makefile.am  client.c  encrypt.c  gmodule_plugin_howto  plugin_howto
gmodule-plugins/browse/: .cvsignore  browse.c
gmodule-plugins/client/: client.c  client.h
gmodule-plugins/convert/: Makefile.am  convert.c
gmodule-plugins/ctag/: Makefile.am
gmodule-plugins/cvsdiff/: .cvsignore  Makefile.am  client.c  cvsdiff.c
gmodule-plugins/diff/: .cvsignore  Makefile.am  diff.c
gmodule-plugins/email/: .cvsignore  Makefile.am  email.c
gmodule-plugins/encrypt/: Makefile.am  encrypt.c
gmodule-plugins/goad/: .cvsignore
gmodule-plugins/hello/: Makefile.am  hello.c
gmodule-plugins/launcher/: Makefile.am  README  launcher-impl.c  launcher-server.c
gmodule-plugins/prm/: Makefile.am  client.c  client.h  maincode.c  maincode.h  msgbox.h
gmodule-plugins/reverse/: .cvsignore  Makefile.am  reverse.c
gmodule-plugins/shell/: .cvsignore  Makefile.am  Makefile.in  main.c  shell.plugin.in
gmodule-plugins/spell/: .cvsignore  Makefile.am  spell.c
gmodule-plugins/testselect/: Makefile.am  testselect.c
help/: ChangeLog  ChangeLog-20090418  Makefile.am
help/C/: Makefile.am  (+44 more)
pixmaps/: Makefile.am  gE-icon-1.xpm  gE-icon-2.xpm  gE_icon.xpm  gedit-icon.xpm  gedit-logo.svgz
plugins/: .cvsignore  ChangeLog  Makefile.am  client.c  client.h  decrypt.c  diff.c  email.c  encrypt.c  gmodule_plugin_howto  plugin_howto  reverse.c
src/: .cvsignore  ChangeLog  GNOME_Gedit.idl  GTK.Makefile.am  Makefile.am  Makefile.in  about.c  about.h  auto.h  bonobo-mdi-child.c  bonobo-mdi-child.h  bonobo-mdi-session.c  bonobo-mdi.c  bonobo-mdi.h  client.c  client.h  commands.c  commands.h  configure  configure.in  cvsdiff.c  dialog.c  diff.c  document.c  document.h  file.c  file.h  gE_about.c  gE_about.h  gE_document.c  gE_document.h  gE_files.c  gE_files.h  gE_init.c  gE_mdi.c  gE_mdi.h  gE_plugin.c  gE_plugin.h  gE_plugin_api.c  gE_plugin_api.h  (+112 more)
tests/: Makefile.am  document-input-stream.c  document-loader.c  document-output-stream.c  document-saver.c  newline-converter.c  smart-converter.c  test-overlay.c  test-rounded-frame.c
viewer/: .cvsignore  ChangeLog  Makefile.am  gedit-factory.c  gedit-persist-stream.c  gedit-persist-stream.h  gedit-viewer.c  gedit-viewer.h
(+679 files in other folders)
